manifest/foi-scrollytelling.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: foi-scrollytelling
---
# Source: SandBox/charts/foi-scrollytelling-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foi-scrollytelling-app
  namespace: foi-scrollytelling
  labels:    
    app.kubernetes.io/name: foi-scrollytelling-app
    app.kubernetes.io/instance: foi-scrollytelling
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: foi-scrollytelling-app
    app.kubernetes.io/instance: foi-scrollytelling
---
# Source: SandBox/charts/foi-scrollytelling-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foi-scrollytelling-app
  namespace: foi-scrollytelling
  labels:
    app.kubernetes.io/name: foi-scrollytelling-app
    app.kubernetes.io/instance: foi-scrollytelling
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: foi-scrollytelling-app
      app.kubernetes.io/instance: foi-scrollytelling
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foi-scrollytelling-app
        app.kubernetes.io/instance: foi-scrollytelling
    spec:
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: foi-scrollytelling-app
          securityContext: {}
          image: "thorstenbaek/foi-scrollytelling:v1.0.2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP          
          resources:
            {}
---
# Source: SandBox/charts/foi-scrollytelling-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foi-scrollytelling-app
  namespace: foi-scrollytelling
  labels:
    helm.sh/chart: foi-scrollytelling-app-0.1.0
    app.kubernetes.io/name: foi-scrollytelling-app
    app.kubernetes.io/instance: foi-scrollytelling
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "foi-scrollytelling.sandbox.dips.no"
      secretName: foi-scrollytelling-app-sandbox-tls
  rules:
    - host: "foi-scrollytelling.sandbox.dips.no"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foi-scrollytelling-app
                port: 
                  number: 80
